# api-server-rs

./: .env  Cargo.toml  README.md  docker-compose.yml
src/: async_await.rs  error.rs  infra.rs  initializer.rs  main.rs  serviceclient.rs  web.rs  wrapper.rs
src/domain/: interface.rs  model.rs  service.rs
src/infra/: conn_pool.rs  jwt_handler.rs
src/serviceclient/: problem_repo.rs
src/wrapper/: error.rs  server.rs  web.rs
