[package]
name = "provenian-api-server-rs"
version = "0.1.0"
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0.8"
actix-http = "0.2.10"
dotenv = "*"
futures01 = { version = "0.1.26" }
futures-preview = { version = "=0.3.0-alpha.19", features = ["io-compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = "0.3.1"
async-trait = "0.1.13"
failure = "0.1.6"
env_logger = "0.7.0"
log = "0.4.8"
biscuit = "0.3.1"
debil-mysql = { git = "https://github.com/myuon/debil-mysql.git" }
mysql_async = "0.21.0-alpha.2"
reqwest = "0.9.22"
base64 = "*"
