[package]
name = "provenian-api-server-rs"
version = "0.1.0"
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
futures01 = { version = "0.1.26" }
futures-preview = { version = "=0.3.0-alpha.19", features = ["io-compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = "0.3.1"
async-trait = "0.1.17"
failure = "0.1.6"
env_logger = "0.7.0"
log = "0.4.8"
biscuit = "0.3.1"
debil = { git = "https://github.com/myuon/debil.git" }
debil-mysql = { git = "https://github.com/myuon/debil-mysql.git" }
mysql_async = "0.21.0-alpha.2"
reqwest = "0.9.22"
base64 = "*"
tokio = "1.8.4"
time = "*"
hyper = { version  = "0.13.0-alpha.4", features = ["unstable-stream"] }
path-tree = "0.1.9"
http = "0.1.19"
